FOUND HAMBURGER MENU BUG, ADDED ADDITIONAL LOOP TO CHANGE COLOR FOR DARK MODE SO IT WOULD NOT DISAPPEAR ON MOBILE

--- a/style.css
+++ b/style.css
@@ -300,9 +300,13 @@ input {
   background-color: #edc7b7;
 }
 
-
-
-
+/* HAMBURGER MENU STYLE CHANGE */
+.fun-hamburger-color {
+  color: black;
+}
+.dark-hamburger-color {
+  color: white;
+}
 
 
 /* MEDIA QUERIES */
